--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.2",
     "github-markdown-css": "^4.0.0",
+    "js-cookie": "^2.2.1",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
