--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
     "mavon-editor": "^2.9.0",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.7",
     "vue-router": "^3.1.6",
